clusters/themachine/zakharhome-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zakharhome-site
  namespace: zakharhome-site
  labels:
    app.kubernetes.io/name: zakharhome-site
spec:
  ingressClassName: traefik
  rules:
    - host: zakharhome.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zakharhome-site
                port:
                  name: http
